--- a/analysis.html
+++ b/analysis.html
@@ -66,37 +66,118 @@
 		function getB(c) {
 			return parseInt(c.substring(5), 16);
 		}
+		function compose(r, g, b) {
+			return (r.toString(16)+g.toString(16)+b.toString(16)).toUpperCase();
+		}
+		function getH(c) {
+			return hsl([getR(c), getG(c), getB(c)])[0];
+		}
+		function getS(c) {
+			return hsl([getR(c), getG(c), getB(c)])[1];
+		}
+		function getL(c) {
+			return hsl([getR(c), getG(c), getB(c)])[2];
+		}
 
-		var osnovne_barve = ["4DBEFF","FFF94D","67FF4D","FF2B2B","FF2BE6","5D2BFF","1F917A"];
+		function hsl(c) {
+			var r = c[0];
+			var g = c[1];
+			var b = c[2];
+			r /= 255;
+			g /= 255;
+			b /= 255;
 
+			var max = Math.max(r, g, b), min = Math.min(r, g, b);
+			var h, s, l = (max + min) / 2;
+
+			if (max == min) {
+				h = s = 0; // achromatic
+			} else {
+				var d = max - min;
+				s = l > 0.5 ? d / (2 - max - min) : d / (max + min);
+
+				switch (max) {
+					case r: h = (g - b) / d + (g < b ? 6 : 0); break;
+					case g: h = (b - r) / d + 2; break;
+					case b: h = (r - g) / d + 4; break;
+				}
+
+				h /= 6;
+			}
+			return [ h*360, s, l ];
+		}
+		function rgb(c) {
+			var h = c[0]/360;
+			var s = c[1];
+			var l = c[2];
+
+			var r, g, b;
+
+			if (s == 0) {
+				r = g = b = l; // achromatic
+			} else {
+				function hue2rgb(p, q, t) {
+					if (t < 0) t += 1;
+					if (t > 1) t -= 1;
+					if (t < 1/6) return p + (q - p) * 6 * t;
+					if (t < 1/2) return q;
+					if (t < 2/3) return p + (q - p) * (2/3 - t) * 6;
+					return p;
+				}
+
+				var q = l < 0.5 ? l * (1 + s) : l + s - l * s;
+				var p = 2 * l - q;
+
+				r = hue2rgb(p, q, h + 1/3);
+				g = hue2rgb(p, q, h);
+				b = hue2rgb(p, q, h - 1/3);
+			}
+
+			return [ r * 255, g * 255, b * 255 ];
+		}
+
+
+
+		var osnovne_barve = ["EBFBFC", "CFFBFF", "4DBEFF","FFF94D","67FF4D","FF2B2B","FF2BE6","5D2BFF","1F917A", "000000", "FFFFFF"];
+/*
 		function similarTo(original) {
-			var deviations = []
+			var resolution = 5; // 3*(256 / res +1) different colours [3=RGB, 256=max-col, +1=edge-case]
+			var res = 1<<resolution; // has to be a power of 2
+
+			var sector_width = 256/res;
+			var halfsector_width = sector_width/2;
+
 			for (var i = 0; i < osnovne_barve.length; i++) {
-				deviations[i] = Math.abs(getR(original)-getR(osnovne_barve))
-							+ Math.abs(getG(original)-getG(osnovne_barve))
-							+ Math.abs(getB(original)-getB(osnovne_barve));
+				[
+					Math.floor(getR(original) / res),
+					Math.abs(getG(original)-getG(osnovne_barve[i])),
+					Math.abs(getB(original)-getB(osnovne_barve[i]))
+				]
 			}
 
 			var min = 0;
 			for (var i = 0; i < osnovne_barve.length; i++) {
 				if (deviations[i] < deviations[min]) min = i;
+				console.log("deviations[i]: "+deviations[i]+" deviations[min]: "+deviations[min])
 			}
 			return min;
 		}
+		console.log(similarTo("F0F8FF"));*/
 
 		var eng_to_int = {"one": 1, "two": 2, "three": 3, "four": 4, "five": 5, "six": 6, "seven":7, "eight": 8, "nine": 9, "zero": 0};
 		var int_to_eng = ["zero", "one", "two", "three", "four", "five", "six", "seven", "eight", "nine"]
 
 		data = [
-			["Jess", {"one": "F0C800","two": "94D400","three": "C20061","four": "804726","five": "F70000","six": "00F0C8","seven": "124F00","eight": "0045AD","nine": "8B00A1","zero": "E0E0E0"}],
+			["Jess 1", {"one": "F0C800","two": "94D400","three": "C20061","four": "804726","five": "F70000","six": "00F0C8","seven": "124F00","eight": "0045AD","nine": "8B00A1","zero": "E0E0E0"}],
 			["Masa 1", {"one": "004E8D","two": "7FC900","three": "F6EE00","four": "D91600","five": "BA0097","six": "70009B","seven": "00EEFF","eight": "002BAF","nine": "0098AC","zero": "00F1F1"}],
 			["Nina", {"one": "AFA500","two": "006934","three": "23009E","four": "A30016","five": "008AB2","six": "523F00","seven": "8F007F","eight": "FF2626","nine": "00DACE","zero": "726F00"}],
 			["Ita", {"one": "C21300","two": "007F15","three": "020005","four": "9026B1","five": "E7D927","six": "503800","seven": "001E52","eight": "45DCD3","nine": "690000","zero": "EEB957"}],
 			["Unknown", {"one": "FFFFFF","two": "FCFA00","three": "E600E3","four": "30C600","five": "008AE6","six": "D70043","seven": "48040D","eight": "5F0088","nine": "B48400","zero": "D5D5D5"}],
 			["Novoselec", {"one": "000000","two": "D4DB00","three": "004FD9","four": "DE6000","five": "0000D1","six": "7600BA","seven": "D42300","eight": "077000","nine": "C900C3","zero": "FFFFFF"}],
 			["Domen", {"one": "000000","two": "00095C","three": "4B7000","four": "FA0000","five": "F5ED00","six": "06A600","seven": "E37900","eight": "00591E","nine": "0000D6","zero": "00F0D8"}],
-			["Sajovic", {"one": "26BD00","two": "D98200","three": "FCEB79","four": "FFE2D6","five": "F74A00","six": "EB3D88","seven": "A2FF00","eight": "0000FF","nine": "6600FF","zero": "FFFFFF"}],
-			["Masa 2", {"one": "0013AB","two": "5BFF00","three": "FFF900","four": "E03C00","five": "FFB9F3","six": "7C31D5","seven": "76CFDA","eight": "002F9B","nine": "5764EB","zero": "DDFCFA"}]
+			["Teja", {"one": "26BD00","two": "D98200","three": "FCEB79","four": "FFE2D6","five": "F74A00","six": "EB3D88","seven": "A2FF00","eight": "0000FF","nine": "6600FF","zero": "FFFFFF"}],
+			["Masa 2", {"one": "0013AB","two": "5BFF00","three": "FFF900","four": "E03C00","five": "FFB9F3","six": "7C31D5","seven": "76CFDA","eight": "002F9B","nine": "5764EB","zero": "DDFCFA"}],
+			["Jess 2", {"one": "FFE600","two": "12A800","three": "EF00F7","four": "825A00","five": "E30000","six": "008CE6","seven": "C7E600","eight": "0062F0","nine": "8800FF","zero": "B6FAF7"}],
 		];
 
 
@@ -107,22 +188,26 @@
 
 		$('#main')[0].appendChild(document.createElement("br"));
 
+		console.log("rgb(221, 252, 250) is hsl("+ hsl([221, 252, 250])+".")
+		console.log("back to rgb is "+ rgb(hsl([221, 252, 250]))+".")
+
 		/* calculate averages */
 		var avg = {};
 		for (var i = 0; i < 10; i++) {
-			var sumR = 0;
-			var sumG = 0;
-			var sumB = 0;
+			var sumH = 0;
+			var sumS = 0;
+			var sumL = 0;
 			for (var j = 0; j < data.length; j++) {
-				sumR += getR(data[j][1][int_to_eng[i]]);
-				sumG += getG(data[j][1][int_to_eng[i]]);
-				sumB += getB(data[j][1][int_to_eng[i]]);
+				sumH += getH(data[j][1][int_to_eng[i]]);
+				sumS += getS(data[j][1][int_to_eng[i]]);
+				sumL += getL(data[j][1][int_to_eng[i]]);
 			}
-			avgR = Math.round(sumR / data.length);
-			avgB = Math.round(sumB / data.length);
-			avgG = Math.round(sumG / data.length);
-			avg[int_to_eng[i]] = (avgR.toString(16) + avgG.toString(16) + avgB.toString(16)).toUpperCase();
-			console.log(avg[int_to_eng[i]]);
+			avgH = Math.round(sumH / data.length);
+			avgS = Math.round(sumS / data.length);
+			avgL = Math.round(sumL / data.length);
+			c = rgb([avgH, avgS, avgL]);
+			avg[int_to_eng[i]] = compose(c[0], c[1], c[2]);
+			//console.log(avg[int_to_eng[i]]);
 		}
 		addSet(avg, "Average");
 
