--- a/analysis.html
+++ b/analysis.html
@@ -334,13 +334,11 @@
 				{"one": "1FBA00","two": "B10091","three": "826800","four": "1C1407","five": "00B5C0","six": "5D5086","seven": "D86D94","eight": "68001C","nine": "575556","zero": "00028B"},
 				{"one": "D800C7","two": "514C52","three": "E03E00","four": "51A8AB","five": "7BF5FF","six": "58A85E","seven": "D9F100","eight": "FF6868","nine": "7D7D7D","zero": "000000"}
 			],
-			["test (consistent)",
-				{"one": "000000","two": "00FFFF","three": "00FF00","four": "A30016","five": "008AB2","six": "00DACE","seven": "00DACE","eight": "00DACE","nine": "00DACE","zero": "726F00"},
-				{"one": "000000","two": "00FFFF","three": "00FF00","four": "A30016","five": "008AB2","six": "00DACE","seven": "00DACE","eight": "00DACE","nine": "00DACE","zero": "726F00"},
+			["Lucija",
+				{"one": "CBBF00","two": "8B008E","three": "03BA00","four": "E01B00","five": "008EB7","six": "E88B00","seven": "EA2BE3","eight": "32E000","nine": "17006D","zero": "FFFFFF"}
 			],
-			["test2 (inconsistent)",
-				{"one": "000000","two": "00FFFF","three": "00FF00","four": "0000FF","five": "EEFF00","six": "000000","seven": "0FFF00","eight": "F0F0FF","nine": "0FFFF0","zero": "00FFF0"},
-				{"one": "FFFFFF","two": "FF0000","three": "FF00FF","four": "FFFF00","five": "2211FF","six": "FFFFFF","seven": "F000FF","eight": "0F0F00","nine": "F0000F","zero": "FF000F"},
+			["Lara",
+				{"one": "0089C4","two": "FFFFFF","three": "F55C00","four": "07D100","five": "F02D00","six": "AA00F3","seven": "9A00EB","eight": "000000","nine": "1300BB","zero": "FFFFFF"}
 			],
 			["Ita", {"one": "C21300","two": "007F15","three": "020005","four": "9026B1","five": "E7D927","six": "503800","seven": "001E52","eight": "45DCD3","nine": "690000","zero": "EEB957"}],
 			["Novoselec", {"one": "000000","two": "D4DB00","three": "004FD9","four": "DE6000","five": "0000D1","six": "7600BA","seven": "D42300","eight": "077000","nine": "C900C3","zero": "FFFFFF"}],
